Fixed spacing of diff object

--- a/frontend/src/app/edit/edit.component.scss
+++ b/frontend/src/app/edit/edit.component.scss
@@ -765,7 +765,7 @@ Preserve the relative scale, though. */
 
 .diffObject{
     margin-left: 20px;
-    grid-template-columns: 2fr 2fr 0.5fr;
+    grid-template-columns: 2fr 0.5fr;
 }
 
 .selectedHistory {
